yoshimi 2.1.0 M

2010-9-27 Will
* Removed redundant references the checksynthengines

2010-9-23 Will
* Merged in latest banks updates
* Updated build number

2010-9-15 Will
* Double click in filer favourite paths window sets it directly.
* Updated User Guide.
* update_guide_version.py no longer adds M/rc{n} suffixes.

*BugFix: textmsg leak loading instruments.

2010-9-14 Will
* Commented out CLI test message in interchange.
* Updated build dependencies.

2010-9-11 Will
* BugFix: Crash when trying to clear or save inactive part.
* Added missing ALSA connection type to config list report.

2010-9-10 Will
* Commented out legit filename test in MidiLearn.cpp
  This was falsely adjusting valid filenames.

2010-9-7 Will
* BugFix: Corrupted instrument Copyright and Comments entries.

2010-9-5 Will
* Replaced logging type numbers with labels.
* Added (commented out) test massages in main.cpp.

2010-9-4 Will
* Revised Config.cpp to streamline and improve readability.

2010-9-3 Will
* Merged in revisedArgs
* Code cleanups.
  No changes to logic.

* CLI load file at start can now specify part number.

2021-8-30 Will
* BugFix: crash when trying to import bank.
  last seen code not trapping out of range values.

2021-8-29 Will
* Cleaned up history vector implementation.
* Separated last seen files from history.
  If history was locked so was last seen.

2021-8-28 Will
* Reverted manual code to minimise load time.

2021-8-25 Will
* Improved manual search.
  No longer uses tmp and reinstated PDF.
* Moved all popen commands to FileMgrFuncs.h
* Improved single master detection.

* Started separating startup options from Config.cpp
  Currently disabled.

2021-8-24 Will
* Slight speed up for user guide search.

2021-8-23 Will
* Final cleanups
* General Doc updates
* Set release version 2.1.0

2021-8-22 Will
* Last minute bugfix :(
  If HTML manual couldn't be found it went into
  loop fetching old pdf one and opening pdf reader
  so commented out pdf section.

* Added LV2 correction.