@@ -604,12 +604,6 @@
       <td>less than 64 disables</td>
     </tr>
     <tr>
-      <td>83</td>
-      <td> </td>
-      <td>Enable activation of part when program changed</td>
-      <td>&emsp;less than 64 disables</td>
-    </tr>
-    <tr>
       <td>84</td>
       <td> </td>
       <td>Set CC control for extended program change</td>
