@@ -105,8 +105,6 @@
     <br><br>
     <b>Enable Program Change</b> Determines whether you want to allow Program/Instrument changes via MIDI from <a href="../bank/bank.html">banks</a>.
     <br><br>
-    <b>Enable Part On Program Change</b> Having this set will activate a part if it is not active when it receives a program change message.
-    <br><br>
     <b>Enable Extended Program Change</b> This lets you set a specific CC that will then perform program changes on the upper 32 instruments in a bank.
     <br><br>
     <b>Extended Program Change CC</b> The is the actual CC to use for extended program changes. The value sent should be the slot number of the wanted Instrument minus 128.
