@@ -219,8 +219,7 @@ static std::string configlist [] = {
     "ROot [s]",            "root CC (Msb, Lsb, Off)",
     "BAnk [s]",            "bank CC (Msb, Lsb, Off)",
     "PRogram [s]",         "program change (ON, {other})",
-    "ACtivate [s]",        "program change activates part (ON, {other})",
-    "EXTended [n]",        "CC value for extended program change >= 128 is off",
+    "EXTended [n]",        "CC value for extended program change >= 120 is off",
     "Quiet [s]",           "ignore 'reset all controllers' (ON, {other})",
     "Nrpn [s]",            "incoming NRPN (ON, {other})",
     "Log [s]",             "incoming MIDI CCs (ON, {other})",
