@@ -165,7 +165,6 @@ class Config
         int           midi_bank_root;
         int           midi_bank_C;
         int           midi_upper_voice_C;
-        int           enable_part_on_voice_load;
         bool          enable_NRPN;
         bool          ignoreResetCCs;
         bool          monitorCCin;
