@@ -1,5 +1,11 @@
 yoshimi 2.1.0 M
 
+2010-9-29 Will
+* Removed controls to enable part on program change.
+  It was only relevant to MIDI and always on regardless.
+* Made new bank version numbers positive
+  starting from 10 to clear trial versions.
+
 2010-9-27 Will
 * Removed redundant references the checksynthengines
 
